# Media-App

./: .gitignore  CMakeLists.txt  Makefile  Media-App  README.md  build.sh
include/core/: MediaPlayer.h
include/playback/: IPlaybackEngine.h
include/web/: WebServer.h  WebServerImpX1.h
src/: main.cpp
src/web/: WebServer.cpp  WebServerImpX1.cpp
webui/: index.html  player.html
webui/css/: style.css
